Bug 95324 - [HSW] GL33-CTS.gtf32.GL3Tests.packed_pixels.packed_pixels_pbo fails in one case
Summary: [HSW] GL33-CTS.gtf32.GL3Tests.packed_pixels.packed_pixels_pbo fails in one case
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Intel 3D Bugs Mailing List
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-09 06:57 UTC by Dave Airlie
Modified: 2016-11-03 16:59 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Dave Airlie 2016-05-09 06:57:33 UTC
I've confirmed it passes with llvmpipe

<Text>INFO/packed_pixels_pbo: INFO:packed_pixels_pbo:Compare: input (format GL_RED_INTEGER type GL_UNSIGNED_INT sizedFormat GL_R32UI) -&gt; o
utput (format GL_RED_INTEGER type GL_BYTE)
</Text>
 <Text>ERROR/packed_pixels_pbo: ERROR:packed_pixels_pbo:Compare: unsigned integer comparison: 4, 0, 72: 127 == 4294967168: not equal. 
</Text>
 <Text>ERROR/packed_pixels_pbo: ERROR:packed_pixels_pbo:Compare: Comparison failed
</Text>
 <Text>ERROR/packed_pixels_pbo: ERROR:packed_pixels_pbo:Gradient comparison failed

Is the only failing case.
Comment 1 Matt Turner 2016-11-03 04:08:54 UTC
Test now passes for me. Not sure if it was a Mesa or a CTS change.
Comment 2 Alejandro Piñeiro (freenode IRC: apinheiro) 2016-11-03 11:42:27 UTC
(In reply to Matt Turner from comment #1)
> Test now passes for me. Not sure if it was a Mesa or a CTS change.

FWIW, in order to pass, that test (and the one without _pbo) needs the library libtxc-dxtn installed on the system. That library is not officially available on several distros, needing specific ppas or similar. So it is really common to not have it installed on your system (at least it happened to me).
Comment 3 Matt Turner 2016-11-03 16:59:28 UTC
Ah, good to know. Thanks for the information.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.